Added onLonClickLisner on rowView to select/unselect an image Added a button to compare th two lists Trying to add instructions for first use

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">N2A</string>
+    <string name="app_name">PhotosQuizz</string>
     <string name="action_settings">Settings</string>
 </resources>
